package cars.correction.exercice2.src.trafficlight;

public enum LightColor {
	GREEN,
	RED,
	ORANGE
};

