@startuml

package Exo2{
    class TrafficLight{
        - isOn: Boolean
        + <<create>> TrafficLight()
        + onOff()
        + switchColor()
        + setStrategy(strategy: SwitchLightStrategy)
    }

    enum LightColor{
        + GREEN
        + ORANGE
        + GREEN
    }

    interface SwitchLightStrategy{
        + switchColor(currentColor: LightColor): LightColor
    }

    class SwitchFrance{
        + <<create>> SwitchFrance(currentColor: LightColor): LightColor
        + switchColor()
    }

    class SwitchGermany{
        + <<create>> SwitchGermany(currentColor: LightColor): LightColor
        + switchColor()
    }
}

class TrafficLightApp{
    + {static} main(args: String[])
}

SwitchFrance --|> SwitchLightStrategy
SwitchGermany --|> SwitchLightStrategy
SwitchGermany *-> "1\n - lastcolor" LightColor: > owns

TrafficLight *-> "1\n - _strategy" SwitchLightStrategy: > choose

TrafficLight *-> "1\n - color" LightColor: > owns
TrafficLightApp ..> "<<uses>>" TrafficLight
TrafficLightApp ..> "<<uses>>" LightColor
TrafficLightApp .> "<<uses>>" SwitchFrance
TrafficLightApp .> "<<uses>>" SwitchGermany
@enduml
